# mtbuddy

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/workstation-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/workstation-ui/scripts/: smoke.mjs
apps/workstation-ui/src/: App.css  App.tsx  mockData.ts
apps/workstation-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/workstation-ui/src-tauri/src/: main.rs
docs/: openclaw-mtclaw.md  plan.md  workstation-ui.md
integrations/mtclaw/: README.md  functions.jsonl
integrations/mtclaw/scripts/: mtbuddy_generate_report.sh  mtbuddy_list_files.sh  mtbuddy_pptx_create_from_outline.sh  mtbuddy_pptx_read_text.sh  mtbuddy_read_file.sh  mtbuddy_run_workspace.sh  mtbuddy_write_action_csv.sh
skills/pptx/: SKILL.md
src/mtbuddy/: __init__.py  __main__.py  cli.py  mtclaw_tools.py
src/mtbuddy/core/: __init__.py  analysis.py  artifacts.py  audit.py  executor.py  interfaces.py  llm.py  workflow.py  workspace.py
src/mtbuddy/integrations/: __init__.py  agent_clients.py  agent_executor.py  openclaw.py
src/mtbuddy/skills/: __init__.py  doc_skill.py  file_skill.py  pptx_skill.py  sheet_skill.py
tests/: test_agent_clients.py  test_cli_e2e.py  test_pptx_tools.py
workspaces/demo/: meeting-notes.md  metrics.csv  presentation-outline.md  research-notes.txt
