[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtbuddy"
version = "0.1.0"
description = "MTBUDDY local-first personal AI workstation core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MTBUDDY contributors" }]
dependencies = ["python-pptx>=1.0.2"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
mtbuddy = "mtbuddy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
