[package]
name = "mtbuddy-workstation-ui"
version = "0.1.0"
description = "MTBUDDY Tauri workstation shell"
authors = ["MTBUDDY contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "mtbuddy-workstation-ui"
path = "src/main.rs"
